Added Scroll bar for responsive table when viewed in smaller browser

--- a/site/style.css
+++ b/site/style.css
@@ -82,6 +82,12 @@ Style for Data Table
 	padding: 15px;
 	
 }
+@media screen and (max-width: 1200px) {
+    .fx-data table {
+        overflow-x: auto;
+        display: block;
+    }
+}
 /* The Modal (background) */
 .modal {
     display: none; 
